format tooltip in button

--- a/src/resources/views/admin/article_view.hbs
+++ b/src/resources/views/admin/article_view.hbs
@@ -78,10 +78,10 @@
             <td>{{{ this.author}}}</td>   
                <td>{{{convertDate this.createdAt}}}</td>   
             <td>
-                <a href="" class="btn btn-small   blue-grey"><i class="material-icons">details</i></a>
-                <a href="/article/{{{this.article_status}}}/{{{this._id}}}" class="btn btn-small  blue lighten-2 "><i class="material-icons">{{btnStatus this.article_status}}</i></a>
-                <a href="/article/{{this._id}}" class="btn btn-small yellow darken-3 "><i class="material-icons">system_update_alt</i></a>    
-                 <a  data-id="{{{this._id}}}" class="waves-effect waves-light btn  btn-small  modal-trigger btn_delete red" href="#modal1"><i class="material-icons">delete</i></a>
+                <a href="" data-position="top" data-tooltip="Detail" class="btn  tooltipped btn-small   blue-grey"><i class="material-icons">details</i></a>
+                <a data-position="top" data-tooltip="Status" href="/article/{{{this.article_status}}}/{{{this._id}}}" class="btn tooltipped  btn-small  blue lighten-2 "><i class="material-icons">{{btnStatus this.article_status}}</i></a>
+                <a href="/article/{{this._id}}"  data-position="top" data-tooltip="Update" class="btn btn-small tooltipped  yellow darken-3 "><i class="material-icons">system_update_alt</i></a>    
+                 <a  data-id="{{{this._id}}}" data-position="top" data-tooltip="Delete" class="waves-effect tooltipped  waves-light btn  btn-small  modal-trigger btn_delete red" href="#modal1"><i class="material-icons">delete</i></a>
             </td>
             </tr>
               {{else}}
