--- a/src/resources/views/admin/accountTrashPage.hbs
+++ b/src/resources/views/admin/accountTrashPage.hbs
@@ -41,8 +41,8 @@
             
               <td>{{{ convertDate this.deletedAt}}}</td>
              <td>
-                  <a href="" class="btn  blue lighten-2 btn-restore" data-id="{{this._id}}"><i class="material-icons">replay</i></a>
-                 <button data-target="modal1" data-id="{{{this._id}}}" class="btn red modal-trigger btn_delete"> <i class="material-icons">delete</i></button>
+                  <a href=""data-position="top" data-tooltip="Revert" class="btn  tooltipped blue lighten-2 btn-restore" data-id="{{this._id}}"><i class="material-icons">replay</i></a>
+                 <button data-position="top" data-tooltip="Delete" data-target="modal1" data-id="{{{this._id}}}" class="btn tooltipped red modal-trigger btn_delete"> <i class="material-icons">delete</i></button>
              </td>
 
           
