--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,5 +1,5 @@
 <nav id="navbar" class="navbar">
-  <a href="#" class="navbar-brand">
+  <a href="/" class="navbar-brand">
     <img src="./images/pills.svg" alt="" class="logo" />
     medicale
   </a>
@@ -9,13 +9,19 @@
   <div id="nav-mobile" class="left hide-on-med-and-down">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a href="./products.html" class="nav-link">Our Products</a>
+        <a href="/products" class="nav-link">Our Products</a>
       </li>
       <li class="nav-item">
         <a href="./news.html" class="nav-link">News</a>
       </li>
       <li class="nav-item">
         <a href="./about-us.html" class="nav-link">About Us</a>
+      </li>
+      <li class="nav-item">
+        <a href="/auth" class="nav-link">Login</a>
+      </li>
+      <li class="nav-item">
+        <a href="/auth/signup_email" class="nav-link">Signup</a>
       </li>
     </ul>
   </div>
