--- a/src/resources/views/user/user_home.hbs
+++ b/src/resources/views/user/user_home.hbs
@@ -132,7 +132,7 @@
      {{/each}}
      
       </section>
-          <h6 class="more"><a href="./products.html">Browse more...</a></h6>
+          <h6 class="more"><a href="/products">Browse more...</a></h6>
         </section>
         <section class="news-section primary-color">
           <h2 class="title">Keep You up to date</h2>
