--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -10,9 +10,9 @@
         </ul>
       </div>
       <div class="col l3 s12">
-        <p class="footer-title">News</p>
+        <p class="footer-title">Articles</p>
         <ul>
-          <li><a class="" href="#!">Latest News</a></li>
+          <li><a class="" href="#!">Latest Articles</a></li>
           <li><a class="" href="#!">Coronavirus</a></li>
           <li><a class="" href="#!">Vaccine</a></li>
         </ul>
@@ -20,14 +20,14 @@
       <div class="col l3 s12">
         <p class="footer-title">Accounts</p>
         <ul>
-          <li><a class="" href="#!">Manage Medicale Account</a></li>
+          <li><a class="" href="#!">Account Settings</a></li>
           <li><a class="" href="#!">Report</a></li>
         </ul>
       </div>
       <div class="col l3 s12">
         <p class="footer-title">About Medicale</p>
         <ul>
-          <li><a class="" href="#!">Our team</a></li>
+          <li><a class="" href="#!">Our Team</a></li>
           <li><a class="" href="#!">Contact Us</a></li>
         </ul>
       </div>
