--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,4 +1,4 @@
-<nav id="navbar" class="navbar">
+<nav id="navbar" class="navbar sticky">
   <a href="/" class="navbar-brand">
     <img src="../img/pills.svg" alt="" class="logo" />
     medicale
@@ -12,7 +12,7 @@
         <a href="/goods" class="nav-link">Our Products</a>
       </li>
       <li class="nav-item">
-        <a href="/news" class="nav-link">News</a>
+        <a href="/news" class="nav-link">Articles</a>
       </li>
       <li class="nav-item">
         <a href="/about/view" class="nav-link">About Us</a>
