--- a/src/resources/views/user/product_view.hbs
+++ b/src/resources/views/user/product_view.hbs
@@ -4,8 +4,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/products.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/flickity@2/dist/flickity.min.css"
@@ -72,19 +70,19 @@
                 {{#each products}}
                   <div class="col s12 m4">
                     <div class="card " style="min-height: 0vh">
-                      <a href="#" class="card-content">
-                        <div class="card-image"  style="height:30%">
+                        <div class="card-image">
                           <img 
                           
                             src="../uploads/{{{this.image}}}"
                           />
                         </div>
+                      <a href="#" class="card-content">
                         <span class="card-tag">NEW</span>
                         <span class="card-title">{{{this.product_name}}}</span>
-                        <p>
+                        <span class="card-brief">
                           this is note product
                           {{{this.note}}}
-                        </p>
+                        </span>
                         <span class="card-price">{{{formatLongString
                             (formatCurrency this.unit_price)
                           }}}</span>
