--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -941,10 +941,14 @@ section .more {
 
 .articles-section .card {
   display: flex;
+  height: 230px !important;
+  min-height: 230px !important;
 }
 
 .articles-section .card .card-image {
   width: 100%;
+  height: 190px;
+  aspect-ratio: auto 100% / 190;
 }
 
 .embed-media {
