--- a/src/resources/views/user/user_home.hbs
+++ b/src/resources/views/user/user_home.hbs
@@ -97,7 +97,8 @@
         </div>
         <section class="products-section primary-color">
           <h2 class="title">Best Sellers</h2>
-        
+        </section>
+        </div>
           <section
           class="carousel js-flickity section-grid"
           data-flickity='{ "groupCells": true }'
@@ -127,9 +128,11 @@
       {{/each}}
      
       </section>
+      <div class="container">
+      <section class="products-section primary-color">
           <h6 class="more"><a href="/products">Browse more...</a></h6>
         </section>
-        <section class="news-section primary-color">
+        <section class="articles-section primary-color">
           <h2 class="title">Recent Articles</h2>
           <div class="section-grid">
             <div class="row">
@@ -160,6 +163,7 @@
             loading="lazy"
           ></iframe>
         </div>
+      </div>
       </div>
     </main>
 
