--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -21,10 +21,10 @@
   </div>
   <div class="right">
     <a href="#" class="nav-link material-icons"> search </a>
-    <a href="./cart.html" id="cart-btn" class="nav-link material-icons">
+    <a href="/cart" id="cart-btn" class="nav-link material-icons">
       shopping_bag
     </a>
-
+     <span href="/auth" class="nav-link">{{totalQty}}</span>
     <div class="auth_user" style="display: flex">
 
       {{#if author}}
