--- a/src/resources/views/user/product_view.hbs
+++ b/src/resources/views/user/product_view.hbs
@@ -92,7 +92,7 @@
 
                       <div class="btns-container">
                         <a
-                          href="#"
+                          href="/cart/{{{this._id}}}"
                           id="btn--add-to-cart"
                           class="btn-active btn"
                         >Add to cart</a>
